# workshop_airflow

./: Dockerfile  exemplo_00.py  pyproject.toml  requiriments.txt
dags/: api_to_postgres.py  duckdb_custom_operator.py  minha_quarta_dag.py  minha_setima_dag.py  minha_sexta_dag.py  minha_terceira_dag.py
frontend/: exemplo_04.py
src/: db.py
